# jolly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
include/: jolly.h  jolly_spdlog.h
src/: CMakeLists.txt  jolly.cpp  meson.build
test/: CMakeLists.txt  test_jolly.cpp  test_jolly_spdlog.cpp
